Updated FormsFeeder core, client and client-cli projects to target Java 8 instead of Java 11.