@@ -2,7 +2,7 @@ package com._4point.aem.formsfeeder.core.datasource;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
@@ -14,9 +14,9 @@ class UnmodifiableFileExtensionsMapTest {
 
 	@Test
 	void testFrom() {
-		var underTest = UnmodifiableFileExtensionsMap.from(UnmodifiableFileExtensionsMap.DEFAULT_MAP);
+		UnmodifiableFileExtensionsMap underTest = UnmodifiableFileExtensionsMap.from(UnmodifiableFileExtensionsMap.DEFAULT_MAP);
 		assertAll(
-				()->assertEquals(MimeType.of("application", "xml"), underTest.mimeType(Path.of("test.xml")).get()),
+				()->assertEquals(MimeType.of("application", "xml"), underTest.mimeType(Paths.get("test.xml")).get()),
 				()->assertEquals("xdp", underTest.fileDefaultExtension(MimeType.of("application", "vnd.adobe.xdp+xml")).get())
 				);
 	}
